tests/core/data/csl/TypeLoaderTests/SyntaxError/struct4.csl
// missing semicolon
struct struct4
{
	attribute string name;
}
